--- a/.travis.yml
+++ b/.travis.yml
@@ -58,32 +58,32 @@ after_success:
   - mkdir apps
 
   # ubuntu bionic
-  - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-stable-appimage.bionic cp Wine-stable-i386-x86_64-bionic.AppImage /tmp/apps
-  - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-stable-appimage.bionic cp Wine-stable-i386-x86_64-bionic.AppImage.zsync /tmp/apps
-  - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-devel-appimage.bionic cp Wine-devel-i386-x86_64-bionic.AppImage /tmp/apps
-  - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-devel-appimage.bionic cp Wine-devel-i386-x86_64-bionic.AppImage.zsync /tmp/apps
-  - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-staging-appimage.bionic cp Wine-staging-i386-x86_64-bionic.AppImage /tmp/apps
-  - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-staging-appimage.bionic cp Wine-staging-i386-x86_64-bionic.AppImage.zsync /tmp/apps
+  - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-stable-appimage.bionic cp wine-stable-i386_x86_64~bionic.AppImage /tmp/apps
+  - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-stable-appimage.bionic cp wine-stable-i386_x86_64~bionic.AppImage.zsync /tmp/apps
+  - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-devel-appimage.bionic cp wine-devel-i386_x86_64~bionic.AppImage /tmp/apps
+  - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-devel-appimage.bionic cp wine-devel-i386_x86_64~bionic.AppImage.zsync /tmp/apps
+  - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-staging-appimage.bionic cp wine-staging-i386_x86_64~bionic.AppImage /tmp/apps
+  - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-staging-appimage.bionic cp wine-staging-i386_x86_64~bionic.AppImage.zsync /tmp/apps
 
   # debian buster
-  # - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-stable-appimage.buster cp Wine-x86_64.AppImage /tmp/apps/Wine-stable-x86_64-buster.AppImage
-  # - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-stable-appimage.buster cp Wine-x86_64.AppImage.zsync /tmp/apps/Wine-stable-x86_64-buster.AppImage.zsync
-  # - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-devel-appimage.buster cp Wine-x86_64.AppImage /tmp/apps/Wine-devel-x86_64-buster.AppImage
-  # - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-devel-appimage.buster cp Wine-x86_64.AppImage.zsync /tmp/apps/Wine-devel-x86_64-buster.AppImage.zsync
-  # - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-staging-appimage.buster cp Wine-x86_64.AppImage /tmp/apps/Wine-staging-x86_64-buster.AppImage
-  # - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-staging-appimage.buster cp Wine-x86_64.AppImage.zsync /tmp/apps/Wine-staging-x86_64-buster.AppImage.zsync
+  # - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-stable-appimage.buster cp wine-x86_64.AppImage /tmp/apps/wine-stable-x86_64-buster.AppImage
+  # - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-stable-appimage.buster cp wine-x86_64.AppImage.zsync /tmp/apps/wine-stable-x86_64-buster.AppImage.zsync
+  # - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-devel-appimage.buster cp wine-x86_64.AppImage /tmp/apps/wine-devel-x86_64-buster.AppImage
+  # - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-devel-appimage.buster cp wine-x86_64.AppImage.zsync /tmp/apps/wine-devel-x86_64-buster.AppImage.zsync
+  # - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-staging-appimage.buster cp wine-x86_64.AppImage /tmp/apps/wine-staging-x86_64-buster.AppImage
+  # - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-staging-appimage.buster cp wine-x86_64.AppImage.zsync /tmp/apps/wine-staging-x86_64-buster.AppImage.zsync
 
   # debian stretch
-  # - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-stable-appimage.stretch cp Wine-x86_64.AppImage /tmp/apps/Wine-stable-x86_64-stretch.AppImage
-  # - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-stable-appimage.stretch cp Wine-x86_64.AppImage.zsync /tmp/apps/Wine-stable-x86_64-stretch.AppImage.zsync
-  # - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-devel-appimage.stretch cp Wine-x86_64.AppImage /tmp/apps/Wine-devel-x86_64-stretch.AppImage
-  # - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-devel-appimage.stretch cp Wine-x86_64.AppImage.zsync /tmp/apps/Wine-devel-x86_64-stretch.AppImage.zsync
-  # - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-staging-appimage.stretch cp Wine-x86_64.AppImage /tmp/apps/Wine-staging-x86_64-stretch.AppImage
-  # - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-staging-appimage.stretch cp Wine-x86_64.AppImage.zsync /tmp/apps/Wine-staging-x86_64-stretch.AppImage.zsync
+  # - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-stable-appimage.stretch cp wine-x86_64.AppImage /tmp/apps/wine-stable-x86_64-stretch.AppImage
+  # - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-stable-appimage.stretch cp wine-x86_64.AppImage.zsync /tmp/apps/wine-stable-x86_64-stretch.AppImage.zsync
+  # - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-devel-appimage.stretch cp wine-x86_64.AppImage /tmp/apps/wine-devel-x86_64-stretch.AppImage
+  # - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-devel-appimage.stretch cp wine-x86_64.AppImage.zsync /tmp/apps/wine-devel-x86_64-stretch.AppImage.zsync
+  # - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-staging-appimage.stretch cp wine-x86_64.AppImage /tmp/apps/wine-staging-x86_64-stretch.AppImage
+  # - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-staging-appimage.stretch cp wine-x86_64.AppImage.zsync /tmp/apps/wine-staging-x86_64-stretch.AppImage.zsync
 
   # archlinux
-  - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wineappimage.arch.latest cp Wine-i386-x86_64-arch.latest.AppImage /tmp/apps
-  - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wineappimage.arch.latest cp Wine-i386-x86_64-arch.latest.AppImage.zsync /tmp/apps
+  - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wineappimage.arch.latest cp wine-i386_x86_64~arch.latest.AppImage /tmp/apps
+  - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wineappimage.arch.latest cp wine-i386_x86_64~arch.latest.AppImage.zsync /tmp/apps
 
   # uploadtool
   - wget -c https://github.com/probonopd/uploadtool/raw/master/upload.sh
