--- a/.travis.yml
+++ b/.travis.yml
@@ -58,12 +58,12 @@ after_success:
   - mkdir apps
 
   # ubuntu bionic
-  - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-stable-appimage.bionic cp wine-stable-i386_x86_64~bionic.AppImage /tmp/apps
-  - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-stable-appimage.bionic cp wine-stable-i386_x86_64~bionic.AppImage.zsync /tmp/apps
-  - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-devel-appimage.bionic cp wine-devel-i386_x86_64~bionic.AppImage /tmp/apps
-  - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-devel-appimage.bionic cp wine-devel-i386_x86_64~bionic.AppImage.zsync /tmp/apps
-  - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-staging-appimage.bionic cp wine-staging-i386_x86_64~bionic.AppImage /tmp/apps
-  - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-staging-appimage.bionic cp wine-staging-i386_x86_64~bionic.AppImage.zsync /tmp/apps
+  - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-stable-appimage.bionic cp "wine-stable-i386_x86_64~bionic.AppImage" /tmp/apps
+  - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-stable-appimage.bionic cp "wine-stable-i386_x86_64~bionic.AppImage.zsync" /tmp/apps
+  - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-devel-appimage.bionic cp "wine-devel-i386_x86_64~bionic.AppImage" /tmp/apps
+  - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-devel-appimage.bionic cp "wine-devel-i386_x86_64~bionic.AppImage.zsync" /tmp/apps
+  - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-staging-appimage.bionic cp "wine-staging-i386_x86_64~bionic.AppImage" /tmp/apps
+  - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-staging-appimage.bionic cp "wine-staging-i386_x86_64~bionic.AppImage.zsync" /tmp/apps
 
   # debian buster
   # - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-stable-appimage.buster cp wine-stable-i386_x86_64~buster.AppImage /tmp/apps
@@ -82,8 +82,8 @@ after_success:
   # - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wine-staging-appimage.stretch cp wine-staging-i386_x86_64~stretch.AppImage.zsync /tmp/apps
 
   # archlinux
-  - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wineappimage.arch.latest cp wine-i386_x86_64~arch.latest.AppImage /tmp/apps
-  - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wineappimage.arch.latest cp wine-i386_x86_64~arch.latest.AppImage.zsync /tmp/apps
+  - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wineappimage.arch.latest cp "wine-i386_x86_64~arch.latest.AppImage" /tmp/apps
+  - docker run --rm -v $(pwd)/apps:/tmp/apps -ti wineappimage.arch.latest cp "wine-i386_x86_64~arch.latest.AppImage.zsync" /tmp/apps
 
   # uploadtool
   - wget -c https://github.com/probonopd/uploadtool/raw/master/upload.sh
