--- a/.travis.yml
+++ b/.travis.yml
@@ -95,3 +95,8 @@ branches:
     - /^(?i:continuous)$/
     - /^release-[0-9a-z\-]*/
     - /^(?i:untagged)-.*$/
+
+notifications:
+  email:
+    on_success: never # default: change
+    on_failure: always # default: always
